# satyre

./: .gitignore  CITATION.cff  LICENSE  PMexamples.py  README.md  analysis_PMbased_FoodFound.py  analysis_PMbased_StepsVeloAngles.py  analysis_areaCovered.py  analysis_foodFound.py  analysis_movementTypes.py  analysis_stepSize.py  analysis_velocitiesAngles.py  comparisons_v2.py  comparisons_v3.py  environment.yml  hyperSpaceSolver_updated.py  pyproject.toml
.github/workflows/: docs.yml  tests.yml
code_samples/: rawData_preprocessing.py  walkSimOO_updated_LevyRandom_v3.py  walkSimOO_updated_darkFly_lightCondition_multiTrials_v2.py  walkSimOO_updated_darkFly_multiTrials_v2.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: analysis.rst  index.rst  simulation.rst  utils.rst
examples/: five_strategy_comparison.py
satyre/: __init__.py
satyre/analysis/: __init__.py  area_covered.py  food_found.py  movement_types.py  step_size.py
satyre/simulation/: __init__.py  levy_walker.py  markov_walker.py
satyre/utils/: __init__.py  hyperspace_solver.py  preprocessing.py
tests/: test_core.py
